etc/helm/pachyderm/envoy.yaml
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: "envoy.resource_monitors.fixed_heap"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
        max_heap_size_bytes: 500000000 # 500MiB
  actions:
    - name: "envoy.overload_actions.shrink_heap"
      triggers:
        - name: "envoy.resource_monitors.fixed_heap"
          threshold:
            value: 0.95
    - name: "envoy.overload_actions.stop_accepting_requests"
      triggers:
        - name: "envoy.resource_monitors.fixed_heap"
          threshold:
            value: 0.98
admin:
  access_log:
    - name: envoy.access_loggers.stderr
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
    - name: public-listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      per_connection_buffer_limit_bytes: 32768
      traffic_direction: INBOUND
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                codec_type: auto
                common_http_protocol_options:
                  idle_timeout: 60s
                  headers_with_underscores_action: REJECT_REQUEST
                http_protocol_options:
                  accept_http_10: false
                http2_protocol_options:
                  max_concurrent_streams: 100
                  initial_stream_window_size: 65536 # 64 KiB
                  initial_connection_window_size: 1048576 # 1 MiB
                stream_idle_timeout: 60s
                request_timeout: 60s
                use_remote_address: true
                stat_prefix: pachyderm_envoy_http
                route_config:
                  virtual_hosts:
                    - name: any
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /
                            grpc: {}
                          route:
                            cluster: pachd-grpc
                            timeout: 604800s # 1 week, for long uploads.
                            idle_timeout: 600s
                        - match:
                            prefix: /
                            headers:
                              - name: authorization
                                string_match:
                                  prefix: AWS4-HMAC-SHA256
                          route:
                            cluster: pachd-s3gateway
                            timeout: 604800s # 1 week, for long uploads
                            idle_timeout: 600s
                        - match:
                            prefix: /dex
                          route:
                            cluster: pachd-identity
                            timeout: 60s
                            idle_timeout: 60s
                        - match:
                            prefix: /authorization-code/callback
                          route:
                            cluster: pachd-oidc
                            timeout: 60s
                            idle_timeout: 60s
                        - match:
                            prefix: /
                          route:
                            cluster: console
                            timeout: 3600s
                            idle_timeout: 600s
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: true
                http_filters:
                  - name: envoy.filters.http.grpc_stats
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                      # If you're thinking of changing this to true, check the security notes in the
                      # documentation:
                      # https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/http/grpc_stats/v3/config.proto
                      stats_for_all_methods: false
                      enable_upstream_stats: true

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: pachd-grpc
      type: logical_dns
      lb_policy: round_robin
      connect_timeout: 10s
      dns_lookup_family: V4_ONLY
      upstream_connection_options:
        tcp_keepalive: {}
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      health_checks:
        - timeout: 10s
          interval: 10s
          healthy_threshold: 1
          unhealthy_threshold: 2
          grpc_health_check: {}
      load_assignment:
        cluster_name: pachd-grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: pachd
                      port_value: 30650
    - name: pachd-identity
      type: logical_dns
      lb_policy: round_robin
      connect_timeout: 10s
      dns_lookup_family: V4_ONLY
      upstream_connection_options:
        tcp_keepalive: {}
      load_assignment:
        cluster_name: pachd-identity
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: pachd
                      port_value: 30658
      health_checks:
        - timeout: 10s
          interval: 30s
          healthy_threshold: 1
          unhealthy_threshold: 2
          http_health_check:
            host: localhost
            path: /dex/.well-known/openid-configuration
    - name: pachd-oidc
      type: logical_dns
      lb_policy: round_robin
      connect_timeout: 10s
      dns_lookup_family: V4_ONLY
      upstream_connection_options:
        tcp_keepalive: {}
      load_assignment:
        cluster_name: pachd-oidc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: pachd
                      port_value: 30657
    - name: pachd-s3gateway
      type: logical_dns
      lb_policy: round_robin
      connect_timeout: 10s
      dns_lookup_family: V4_ONLY
      upstream_connection_options:
        tcp_keepalive: {}
      load_assignment:
        cluster_name: pachd-s3gateway
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: pachd
                      port_value: 30600
    - name: console
      type: logical_dns
      lb_policy: round_robin
      connect_timeout: 10s
      dns_lookup_family: V4_ONLY
      upstream_connection_options:
        tcp_keepalive: {}
      health_checks:
        - timeout: 10s
          interval: 30s
          healthy_threshold: 1
          unhealthy_threshold: 2
          http_health_check:
            host: localhost
            path: /
      load_assignment:
        cluster_name: pachd-s3gateway
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: console
                      port_value: 4000
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        overload:
          global_downstream_max_connections: 50000
